fix overflow - now I remember why I used it here :) forgot to remove overflow-x

--- a/frontend/src/app/pages/login-page/login-page.component.scss
+++ b/frontend/src/app/pages/login-page/login-page.component.scss
@@ -108,6 +108,10 @@ main {
     @include media-breakpoint-up(lg) {
         max-width: 80%;
     }
+    @include media-breakpoint-up(md) {
+        overflow-y: auto;
+        overflow-x: hidden;
+    }
     h3 {
         font-weight: bold;
     }
